--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ q:after {
 
 blockquote {
   /*background-color: #F8F8F8;*/
-  border-left: 2px solid #ffffff;
+  border-left: 2px solid #000000;
   margin: 1.6em 10%;
   padding: .75em 1em;
   font-size:1.8rem;
