--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@
  * Typography & Text styles
  */
 
-/* html is set to 62.5% so that all the REM measurements are based on 10px sizing. So basically 1.5rem = 15px */
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; /* 1 rem = 10px */
 }
+
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  font-size: 1.5rem; /* 15px */
   line-height: 1.6;
   font-weight: 400;
   font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #ffffff;
+  max-width: 80rem; /* Scalable max width */
+  margin: 10px auto;
 }
 
 /**
@@ -20,46 +22,40 @@ body {
 a {
   font-weight: normal;
   text-decoration: none; 
-  color:#EF6D3D;
+  color: #EF6D3D;
 }
+
 a:focus {
   outline: thin dotted;
 }
 
 small {
-  font-size: 75%;
+  font-size: 0.75rem; /* use rem for consistency */
 }
 
 /**
  * Headings
  */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   line-height: 1;
-  text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
+  text-rendering: optimizeLegibility;
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300;
 }
-h1 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h2 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h3 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h4 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h5 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-h6 { font-size: 1.4rem; line-height: 1.6;  letter-spacing: 0; }
+
+h1 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -0.1rem; }
+h2 { font-size: 3.0rem; line-height: 1.3; letter-spacing: -0.1rem; }
+h3 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -0.08rem; }
+h4 { font-size: 1.8rem; line-height: 1.5; letter-spacing: -0.05rem; }
+h5 { font-size: 1.5rem; line-height: 1.6; }
+h6 { font-size: 1.4rem; line-height: 1.6; }
 
 /**
  * Paragraphs
  */
 p {
-  margin: 0 auto 1.5em auto; /* bottom margin for paragraphs */
-}
-p + p {
-
+  margin: 0 auto 1.5em; /* bottom margin for paragraphs */
 }
 
 /**
@@ -68,9 +64,11 @@ p + p {
 q {
   quotes: '\00201C' '\00201D';
 }
+
 q:before {
   content: open-quote;
 }
+
 q:after {
   content: close-quote;
 }
@@ -79,9 +77,10 @@ blockquote {
   background-color: #000000;
   border-left: 2px solid #ffffff;
   margin: 1.6em 10%;
-  padding: .75em 1em;
-  font-size:1.8rem;
+  padding: 0.75em 1em;
+  font-size: 1.8rem;
 }
+
 blockquote p:last-child {
   margin-bottom: 0;  
 }
@@ -90,50 +89,19 @@ blockquote p:last-child {
  * Layout styles
  */
 
-/* Full size background image */
-html, #container, .inner { background-color:transparent;}
+html, #container, .inner { 
+  background-color: transparent;
+}
+
 html {
-  background:url(background.jpg) center center no-repeat fixed;
-  background-size:cover;
+  background: url(background.jpg) center center no-repeat fixed;
+  background-size: cover;
 }
-body {
-  max-width:800px;
-  margin:10px auto;
-}
+
 header, #content, footer { 
-  background: rgba(0,0,0,.8); 
-  padding:25px;
-  color:#ffffff; 
+  background: rgba(0, 0, 0, 0.8); 
+  padding: 2.5rem; /* Use rem for consistent scaling */
+  color: #ffffff; 
 }
 
-/* Menu Links */
-ul.main-menu {
-  margin: 0;
-  padding: 0;
-  display: flex;
- /* flex-wrap: wrap; */
-  justify-content: left;
-  list-style: none;
-}
-ul.main-menu li a {
-  margin-right:20px;
-  font-size:2.0rem;
-  border-bottom: solid transparent 3px;
-  color:#ffffff;
-}
-ul.main-menu li a:hover {
-  color:#FFFFFF;
-}
-ul.main-menu li a.active {
-  color:#FFFFFF;
-  border-bottom-color:#EF6D3D;
-}
-
-/* Utility classes */
-.hide {
-  display:none;
-}
-.show {
-  display:block;
-}
-
+/*
