--- a/style.css
+++ b/style.css
@@ -165,3 +165,18 @@ ul.main-menu li a.active {
 .show {
   display:block;
 }
+
+
+.container {
+  padding: 2rem 0rem;
+}
+
+h4 {
+  margin: 2rem 0rem 1rem;
+}
+
+.table-image {
+  td, th {
+    vertical-align: middle;
+  }
+}
